k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nession
  namespace: nession
spec:
  selector:
    app: nession
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  type: ClusterIP
